env_variables_update

--- a/.env
+++ b/.env
@@ -5,5 +5,10 @@ REDIS_PASSWORD=cnmYDj69Ply5xqTA2B2LCpzWmrdqqPvc
 DB_USER=root
 DB_PASSWORD=password
 
-MYSQL_ROOT_PASSWORD=password
-ARANGO_ROOT_PASSWORD=password
+MYSQL_PASSWORD=password
+MYSQL_USERNAME=root
+
+ARANGO_PASSWORD=password
+
+COMPANY_EMAIL=exampythonmail@gmail.com
+COMPANY_EMAIL_PASSWORD=qtgoaneaffxkqcjp
