--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         image: mysql:latest
         container_name: webdev_final_exam_mysql
         environment:
-            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+            MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
             MYSQL_DATABASE: company
         volumes:
             - mysql_data:/var/lib/mysql
@@ -36,7 +36,7 @@ services:
             - mysql
         environment:
             PMA_HOST: mysql
-            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+            MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
         ports:
             - 8080:80
 
@@ -44,7 +44,7 @@ services:
         image: arangodb:latest
         container_name: webdev_final_exam_arangodb
         environment:
-            ARANGO_ROOT_PASSWORD: ${ARANGO_ROOT_PASSWORD}
+            ARANGO_ROOT_PASSWORD: ${ARANGO_PASSWORD}
         volumes:
             - arangodb_data:/var/lib/arangodb3
         ports:
